# hector_quadrotor_tutorial

./: .gitignore  README.md
hector_baseline/: CMakeLists.txt  package.xml
hector_baseline/include/: baseline.h
hector_baseline/launch/: explore.launch
hector_baseline/src/: Explorer.cpp  explorer_node.cpp
hector_gazebo/hector_gazebo_worlds/Media/bridge/: model.config  model.sdf
hector_gazebo/hector_gazebo_worlds/Media/bridge/meshes/: Bridge.dae
hector_gazebo/hector_gazebo_worlds/Media/models/: ground.dae
hector_gazebo/hector_gazebo_worlds/launch/: ai4all.launch  cafe.launch  final_bridge.launch  ground_plane.launch  soy_row.launch
hector_gazebo/hector_gazebo_worlds/worlds/: ai4all.world  cafe.world  final_bridge.world  ground_plane.world  soy_row.world  soy_row_backup.world
hector_models/hector_sensors_description/urdf/: asus_camera.urdf.xacro  vlp16.urdf.xacro
hector_moveit_config/config/: sensors_velodyne.yaml
hector_moveit_config/launch/: moveit.rviz  quadrotor_moveit_sensor_manager.launch.xml
hector_moveit_exploration/include/: Explorer.h
hector_moveit_exploration/src/: Explorer.cpp
hector_moveit_frontier_exploration/: CMakeLists.txt  package.xml
hector_moveit_frontier_exploration/launch/: frontier_explore.launch
hector_moveit_frontier_exploration/src/: Frontier_Explorer.cpp  frontier_explorer_node.cpp
hector_moveit_gazebo/launch/: ai4all.launch  cafe.launch  final_bridge.launch  lidar_cafe.launch
hector_moveit_gazebo_plugins/src/: fruit_generator.cc
hector_moveit_gazebo_worlds/worlds/: ai4all.world  bridge2.world  bridge4.world  cafe.world  final_bridge.world  final_bridge_empty.world  single_wall.world
hector_moveit_navigation/: CMakeLists.txt  package.xml
hector_moveit_navigation/include/: Navigator.h
hector_moveit_navigation/launch/: navigate.launch
hector_moveit_navigation/src/: Navigator.cpp  ai4all_frontier_exploration.py  frontier_exploration.py  navigator_client.cpp  navigator_client.py  navigator_node.cpp  path_distance_test.cpp  pipeline_test.cpp
hector_quadrotor/hector_quadrotor_demo/launch/: base.launch  base_velodyne.launch  cafe.launch  final_bridge.launch  soy_flight_gazebo (copy).launch  soy_flight_gazebo.launch  soy_gazebo_only.launch  soy_quad.launch
hector_quadrotor/hector_quadrotor_demo/rviz_cfg/: cafe_flight.rviz  soy_flight.rviz
hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro  quadrotor_velodyne.gazebo.xacro  quadrotor_velodyne.urdf.xacro  quadrotor_velodyne_kinect.gazebo.xacro  quadrotor_velodyne_kinect.urdf.xacro
hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch  spawn_quadrotor_with_kinect.launch  spawn_quadrotor_with_velodyne.launch  spawn_quadrotor_with_velodyne_kinect.launch
hector_quadrotor/hector_quadrotor_navigation/: CMakeLists.txt  package.xml
hector_quadrotor/hector_quadrotor_navigation/src/: quadrotor_navigation.cpp  quadrotor_navigation.py
hector_slam/hector_trajectory_server/src/: hector_trajectory_server.cpp
