<?xml version="1.0"?>
<package format="2">
  <name>hector_baseline</name>
  <version>0.0.0</version>
  <description>The hector_baseline package</description>

  <author email="klyu@vt.edu">Kevin Yu</author>
  <maintainer email="klyu@vt.edu">Kevin Yu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>hector_uav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap</depend>
  <depend>hector_moveit_actions</depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>
  <export>

  </export>
</package>
