<?xml version="1.0"?>
<package format="2">
  <name>hector_baseline</name>
  <version>0.0.0</version>
  <description>The hector_baseline package</description>

  <author email="klyu@vt.edu">Kevin Yu</author>
  <maintainer email="klyu@vt.edu">Kevin Yu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>hector_uav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap</depend>
  <depend>hector_moveit_actions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <!-- <exec_depend>pcl_ros</exec_d/epend> -->
  <!-- <exec_depend>pcl_conversions</exec_depend> -->
  <depend>libpcl-all-dev</depend>
  <!-- <exec_depend>libpcl-all</exec_depend> -->
  <export>

  </export>
</package>
